fix: add break-word wrap to code to prevent layout shifting

--- a/src/app.css
+++ b/src/app.css
@@ -16,28 +16,42 @@ body {
 	overflow-y: overlay;
 }
 
-article > p,
+article>p,
 ul {
 	line-height: 2.25;
 }
 
-a:not(article > h1 > a, article > h2 > a, article > h3 > a, article > h4 > a, article
-		> h5
-		> a, article > h6 > a) {
+a:not(article > h1 > a, article > h2 > a, article > h3 > a, article > h4 > a, article > h5 > a, article > h6 > a) {
 	margin: 0;
 	font-weight: 200;
 	color: var(--accent-color);
 	text-decoration: none;
 }
 
-article > h1 > a,
-article > h2 > a,
-article > h3 > a,
-article > h4 > a,
-article > h5 > a,
-article > h6 > a {
+article>h1>a,
+article>h2>a,
+article>h3>a,
+article>h4>a,
+article>h5>a,
+article>h6>a {
 	color: black;
 	text-decoration: none;
+}
+
+article p code,
+article h2 code,
+article h3 code,
+article h4 code,
+article h5 code,
+article h6 code {
+	padding: 0.2em 0.35em;
+	background-color: #efefef;
+	font-size: 1.05em;
+	overflow-wrap: break-word;
+}
+
+article ul>li>a {
+	overflow-wrap: break-word;
 }
 
 a:hover {
@@ -63,31 +77,30 @@ pre {
 	padding-right: 16px;
 	margin-left: -16px;
 	margin-right: -16px;
-	border-left: 4px solid rgba(0, 0, 0, 0); /* Set placeholder for highlight accent border color to transparent */
+	border-left: 4px solid rgba(0, 0, 0, 0);
+	/* Set placeholder for highlight accent border color to transparent */
 }
 
 .code-line.inserted {
-	background-color: rgba(16, 185, 129, 0.2); /* Set inserted line (+) color */
+	background-color: rgba(16, 185, 129, 0.2);
+	/* Set inserted line (+) color */
 }
 
 .code-line.deleted {
-	background-color: rgba(239, 68, 68, 0.2); /* Set deleted line (-) color */
+	background-color: rgba(239, 68, 68, 0.2);
+	/* Set deleted line (-) color */
 }
 
 .highlight-line {
 	margin-left: -16px;
 	margin-right: -16px;
-	background-color: rgba(55, 65, 81, 0.4); /* Set highlight bg color */
-	border-left: 4px solid rgb(59, 130, 246); /* Set highlight accent border color */
+	background-color: rgba(55, 65, 81, 0.4);
+	/* Set highlight bg color */
+	border-left: 4px solid rgb(59, 130, 246);
+	/* Set highlight accent border color */
 }
 
-article p code, article h2 code, article h3 code, article h4 code, article h5 code, article h6 code {	
-	padding: 0.2em 0.35em;
-	background-color: #efefef;
-	font-size: 1.05em;
-}
-
-article blockquote {	
+article blockquote {
 	margin: 0;
 	padding: 1em 2em;
 	background-color: #efefef;
@@ -100,6 +113,7 @@ article blockquote {
 	text-align: right;
 	margin-right: 16px;
 	margin-left: -8px;
-	color: rgb(156, 163, 175); /* Line number color */
+	color: rgb(156, 163, 175);
+	/* Line number color */
 	content: attr(line);
 }
